<resources>
    <string name="app_name">龙商E融</string>
    <string name="back">返回</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="setted">已设置</string>
    <string name="unset">未设置</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="look_up">查看</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="getting">获取中</string>
    <string name="skip">跳过</string>
    <string name="exp">立即体验</string>
    <string name="result_msg_default_error">网络或服务器连接异常，请稍候再试。</string>
    <string name="version_update">版本更新</string>
    <string name="whether_version_update">有版本更新哦，是否更新？</string>
    <string name="version_update_details">更新内容:</string>
    <string name="no_version_update">当前已经是最新版本</string>
    <string name="version_update_details_">小编很懒哦，还没写更新日志</string>
    <string name="day">天</string>
    <string name="percent">%</string>
    <string name="rmb_symbol">￥</string>
    <string name="yuan">元</string>
    <string name="no_data">暂无数据</string>
    <string name="data_exception">数据异常</string>
    <string name="release_to_load_more">松开以加载更多</string>
    <string name="lwns_bank">龙湾农商银行</string>
    <string name="home_page">首页</string>
    <string name="invest">投资</string>
    <string name="property">资产</string>
    <string name="mine">我的</string>
    <string name="logon">登录</string>
    <string name="register">注册</string>
    <string name="find_logon_password">找回登录密码</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="trans_record">交易记录</string>
    <string name="my_invest_record">我的投资记录</string>
    <string name="invest_project_detail">投资项目详情</string>
    <string name="my_bankcard">我的银行卡</string>
    <string name="add_bankcard">添加银行卡</string>
    <string name="select_bankcard">选择银行卡</string>
    <string name="account_safe">账户信息安全</string>
    <string name="personal_info">个人信息</string>
    <string name="message_center">消息中心</string>
    <string name="about_us">关于我们</string>
    <string name="platform_introduce">平台介绍</string>
    <string name="security_guarantee">安全保障</string>
    <string name="recommend_to_friends">推荐给好友</string>
    <string name="invite_friend">邀请好友</string>
    <string name="pay_password_title">请输入交易密码</string>
    <string name="pay">支付</string>
    <string name="novice">新手</string>
    <string name="time_remain">距抽标结束：%1$s天%2$s小时%3$s分%4$s秒</string>
    <string name="time_begin">距离开始还有%1$d天%2$d小时%3$d分%4$d秒</string>
    <string name="expected_annualized_return">预期年化收益</string>
    <string name="product_term">产品期限</string>
    <string name="remain">剩余：%1$s</string>
    <string name="preheating">预热中</string>
    <string name="finished">已完成</string>
    <string name="can_invest_amount_yuan">可投金额%1$s元</string>
    <string name="purchase">抢购</string>
    <string name="financing_amount">融资金额</string>
    <string name="remain_invest">可投金额</string>
    <string name="min_invest_amount">起投金额</string>
    <string name="invest_detail">投资详情</string>
    <string name="project_detail">项目详情</string>
    <string name="project">项目</string>
    <string name="detail">详情</string>
    <string name="transaction_record">成交记录</string>
    <string name="project_description">项目说明书</string>
    <string name="project_name">项目名称</string>
    <string name="project_invest_term">项目（借款）期限</string>
    <string name="currency">币种</string>
    <string name="product_type">产品类型</string>
    <string name="financing_total_lend_amount">融资（总借入）金额</string>
    <string name="fundraise_time">募集期</string>
    <string name="interest_date">起息日</string>
    <string name="due_date">到期日</string>
    <string name="interest_date_colon">起息日：</string>
    <string name="due_date_colon">到期日：</string>
    <string name="repayment_method_colon">还款方式：</string>
    <string name="witness_org_colon">见证机构：</string>
    <string name="witness_org">见证机构</string>
    <string name="min_invest_unit">最小投资单位</string>
    <string name="holiday">节假日</string>
    <string name="tax">税款</string>
    <string name="profit_calc_mode">收益计算方式</string>
    <string name="pay_clearing_org">支付清算机构</string>
    <string name="important_instructions_and_risk_tips">重要说明及风险提示</string>
    <string name="invest_protocol_toast">请阅读并同意《在线投资服务协议书》</string>
    <string name="invest_amount_title">请输入投资金额</string>
    <string name="invest_dialog_tip">*%1$s元起投，每%2$s元递增</string>
    <string name="invest_dialog_toast1">请输入%1$s整数倍的投资金额</string>
    <string name="invest_dialog_toast2">投资金额不可大于可投金额</string>
    <string name="pay_bankcard">付款银行</string>
    <string name="pay_success_tip1">%1$s开始计息</string>
    <string name="pay_success_tip2">%1$s还本付息，预计\n共%2$s元</string>
    <string name="confirm_pay">确认支付</string>
    <string name="order_amount">订单金额</string>
    <string name="expected_profit">预期收益</string>
    <string name="expected_profit_colon">预期收益：</string>
    <string name="balance_pay">余额付款</string>
    <string name="need_pay_amount">还需支付金额：</string>
    <string name="have_read_and_agree">我已阅读并同意</string>
    <string name="invest_protocol">在线投资服务协议书</string>
    <string name="look_my_invest">查看我的投资</string>
    <string name="submit_success">提交成功</string>
    <string name="invest_success_tip1">正在为您申请份额，请5分钟后\n查看投资状态</string>
    <string name="pwd_toast">请输入6位交易密码</string>
    <string name="account_balance">账户余额</string>
    <string name="account_balance_yuan">账户余额（元）</string>
    <string name="due_principal">待收本金</string>
    <string name="due_principal_yuan">待收本金（元）</string>
    <string name="due_profit">待收收益</string>
    <string name="due_profit_yuan">待收收益（元）</string>
    <string name="dued_principal_yuan">已收本金（元）</string>
    <string name="dued_profit_yuan">已收收益（元）</string>
    <string name="invest_record">投资记录</string>
    <string name="due_property">待收资产</string>
    <string name="pay_account">付款账户</string>
    <string name="receive_account">收款账户</string>
    <string name="recharge_amount">充值金额</string>
    <string name="recharge_hint">请输入充值金额（最低100元）</string>
    <string name="withdraw_hint">请输入提现金额</string>
    <string name="available_balance">可用余额：</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="fee">手续费</string>
    <string name="actual_withdraw_amount">实际提现金额</string>
    <string name="account_name">开户名</string>
    <string name="bankcard">银行卡</string>
    <string name="tips">交易资金由龙湾农商银行监管，合规、安全</string>
    <string name="bankcard_pay">银行卡支付</string>
    <string name="card_no">卡号</string>
    <string name="ID">身份证</string>
    <string name="verify_code">验证码</string>
    <string name="agree">同意</string>
    <string name="pay_service_agreement">《支付服务协议》</string>
    <string name="you_have_recharge">您已充值：</string>
    <string name="recharge_tips">资金到账可能会稍有延迟，如果长时间未到账，请致电客服。</string>
    <string name="look_details">查看详情</string>
    <string name="invest_now">立即投资</string>
    <string name="apply_success">您的申请已提交成功：</string>
    <string name="withdraw_apply_detail">提现申请明细</string>
    <string name="actual_arrival_amount">实际到账金额</string>
    <string name="expect_arrival_time">预计到账时间</string>
    <string name="withdraw_info">提现信息</string>
    <string name="one_three_workday">1至3个工作日</string>
    <string name="invest_amount_yuan">投资金额（元）</string>
    <string name="expected_profit_yuan">预期收益（元）</string>
    <string name="project_interest_date">项目起息日</string>
    <string name="project_due_date">项目到期日</string>
    <string name="undue_property">待回款资产</string>
    <string name="dued_property">已回款资产</string>
    <string name="hold_property_total">持有资产总额（元）</string>
    <string name="total_income_yuan">累计收益（元）</string>
    <string name="dued_income_yuan">已收收益（元）</string>
    <string name="invest_status">投标状态</string>
    <string name="invest_amount">投标金额</string>
    <string name="expected_income">预期收益</string>
    <string name="invest_time">投资时间</string>
    <string name="annualized_return">年化收益率</string>
    <string name="see_protocol">查看协议</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="phone_valid_hint">请输入正确格式的手机号</string>
    <string name="logon_password_valid_hint">请输入8-16位数字字母组合密码</string>
    <string name="logon_password_hint">请输入登录密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_now">马上注册</string>
    <string name="logon_btn_text">立即登录</string>
    <string name="graphics_verify_code">图形验证码</string>
    <string name="graphics_verify_code_hint">请输入图形验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="msg_verify_code">短信验证码</string>
    <string name="second_resend">%1$d秒后可重发</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_code_hint">我有邀请码（可不填）</string>
    <string name="msg_verify_code_hint">请输入短信验证码</string>
    <string name="msg_send_success">短信验证码发送成功</string>
    <string name="register_success">注册成功！</string>
    <string name="confirm_register">确认注册</string>
    <string name="certid">身份证号</string>
    <string name="certid_hint">请输入身份证号</string>
    <string name="register_tips">注册即代表同意《平台用户服务协议》</string>
    <string name="reset_pwd_tip">请设置新的登录密码</string>
    <string name="logon_password">登录密码</string>
    <string name="modify_logon_password">修改登录密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="modify_logon_password_now_hint">请输入您现有的登录密码</string>
    <string name="modify_logon_password_new_valid">请输入新的登录密码</string>
    <string name="confirm_password_hint">请重复输入</string>
    <string name="confirm_password_empty_valid">请重复输入登录密码</string>
    <string name="confirm_password_valid">请重复输入8-16位数字字母组合密码</string>
    <string name="confirm_password_unequal_valid">两次输入密码不一致</string>
    <string name="forget_password_success">修改密码成功，请重新登录</string>
    <string name="modify_password_success">密码修改成功</string>
    <string name="pay_password">支付密码</string>
    <string name="pay_password_hint">请输入支付密码</string>
    <string name="pay_password_valid">请输入6位数字支付密码</string>
    <string name="confirm_pay_password_hint">请确认支付密码</string>
    <string name="confirm_pay_password_valid">请输入6位确认支付密码</string>
    <string name="pay_password_set">支付密码设置</string>
    <string name="pay_password_tip">为了您的账户安全，请设置支付密码</string>
    <string name="pay_password_set_success">支付密码设置成功！</string>
    <string name="account">账号：</string>
    <string name="account_check">账号验证</string>
    <string name="pls_input_your_pwd">请输入您的登录密码</string>
    <string name="gesture_password">手势密码</string>
    <string name="open_gesture_password">打开手势密码</string>
    <string name="close_gesture_password">关闭手势密码</string>
    <string name="check_gesture_password">请验证手势密码</string>
    <string name="gesture_password_draw">绘制手势密码</string>
    <string name="gesture_password_set">设置手势密码</string>
    <string name="gesture_password_set_tips">为了您的账户安全，请设置手势密码</string>
    <string name="gesture_password_confirm">请再次绘制</string>
    <string name="gesture_password_input">请输入手势密码</string>
    <string name="gesture_password_forget">忘记手势密码？</string>
    <string name="gesture_password_right_toast">手势密码输入正确！</string>
    <string name="gesture_password_closed_toast">手势密码已关闭！</string>
    <string name="gesture_password_success_toast">手势密码设置成功！</string>
    <string name="gesture_password_wrong_toast">手势密码输入错误！</string>
    <string name="cardholder_name">持卡人姓名</string>
    <string name="cardholder_name_hint">请输入姓名</string>
    <string name="identity_card_no">身份证号码</string>
    <string name="identity_card_no_hint">请输入身份证号码</string>
    <string name="bank_name">银行名称</string>
    <string name="bankcard_no">银行卡号</string>
    <string name="bankcard_no_hint">请输入银行卡号</string>
    <string name="reserve_phone">预留手机号</string>
    <string name="reserve_phone_hint">请输入银行预留手机号</string>
    <string name="get">获取</string>
</resources>