<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_content_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_content_bg"
        android:orientation="vertical">

        <LinearLayout style="@style/InputPanel2">

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/cardholder_name" />

                <EditText
                    android:id="@+id/cardholder_name_edit"
                    style="@style/InputPanelEdit"
                    android:hint="@string/cardholder_name_hint"
                    android:inputType="text" />

            </LinearLayout>

            <View style="@style/Divide" />

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/identity_card_no" />

                <EditText
                    android:id="@+id/identity_card_edit"
                    style="@style/InputPanelEdit"
                    android:hint="@string/identity_card_no_hint"
                    android:inputType="text" />

            </LinearLayout>

            <View style="@style/Divide" />

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/bank_name" />


                <Spinner
                    android:id="@+id/bank_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/arrow_bg" />

            </LinearLayout>

            <View style="@style/Divide" />

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/bankcard_no" />

                <EditText
                    android:id="@+id/bankcard_no_edit"
                    style="@style/InputPanelEdit"
                    android:hint="@string/bankcard_no_hint"
                    android:inputType="text" />

            </LinearLayout>

            <View style="@style/Divide" />

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/reserve_phone" />

                <EditText
                    android:id="@+id/reserve_phone_edit"
                    style="@style/InputPanelEdit"
                    android:hint="@string/reserve_phone_hint"
                    android:inputType="phone" />

            </LinearLayout>

            <View style="@style/Divide" />

            <LinearLayout style="@style/InputPanelItem">

                <TextView
                    style="@style/InputPanelText"
                    android:text="@string/msg_verify_code" />


                <EditText
                    android:id="@+id/msg_verify_code_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/msg_verify_code_hint"
                    android:maxLines="1"
                    android:inputType="number"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#e5e5e5" />

                <Button
                    android:id="@+id/get_phone_code_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/get"
                    android:textColor="#4BA1FF"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/finish_btn"
            style="@style/BtnTheme2"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/finish" />

    </LinearLayout>

</LinearLayout>