<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_content_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        style="@style/InputPanel1"
        android:layout_marginTop="36dp">

        <EditText
            android:id="@+id/phone_num_edit"
            style="@style/InputTheme1"
            android:hint="@string/phone_num_hint"
            android:inputType="phone"
            android:textSize="15sp" />

        <View style="@style/Divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/graphics_verify_code_edit"
                style="@style/InputTheme1"
                android:hint="@string/graphics_verify_code_hint"
                android:inputType="text"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/graphics_img"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

        </LinearLayout>

        <View style="@style/Divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/msg_verify_code_edit"
                style="@style/InputTheme1"
                android:hint="@string/msg_verify_code_hint"
                android:inputType="text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/get_phone_code_button"
                style="@style/MsgBtn1"
                android:layout_marginRight="4dp"
                android:text="@string/get_verify_code" />
        </LinearLayout>

        <View style="@style/Divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_edit"
                style="@style/InputTheme1"
                android:hint="@string/logon_password_valid_hint"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/InputPanel1"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/invite_code_edit"
            style="@style/InputTheme1"
            android:hint="@string/invite_code_hint"
            android:inputType="text"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        style="@style/BtnTheme1"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_register" />

    <TextView
        android:id="@+id/protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:text="@string/register_tips"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>