<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_content_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/reset_pwd_tip"
        android:textColor="#4a4a4a"
        android:textSize="14sp" />

    <LinearLayout style="@style/InputPanel2">

        <EditText
            android:id="@+id/password_edit"
            style="@style/InputTheme2"
            android:hint="@string/logon_password_valid_hint"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <View style="@style/Divide" />

        <EditText
            android:id="@+id/confirm_password_edit"
            style="@style/InputTheme2"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/finish_btn"
        style="@style/BtnTheme2"
        android:layout_marginTop="30dp"
        android:text="@string/finish" />

</LinearLayout>