<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_content_bg"
    android:orientation="vertical">

    <LinearLayout
        style="@style/InputPanel2"
        android:layout_marginTop="36dp">

        <EditText
            android:id="@+id/phone_num_edit"
            style="@style/InputTheme2"
            android:hint="@string/phone_num_hint"
            android:inputType="phone"
            android:textSize="16sp" />

        <View style="@style/Divide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/graphics_verify_code_edit"
                style="@style/InputTheme2"
                android:hint="@string/graphics_verify_code_hint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/graphics_img"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/InputPanel2"
        android:layout_marginTop="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="9dp">

            <EditText
                android:id="@+id/msg_verify_code_edit"
                style="@style/InputTheme2"
                android:hint="@string/msg_verify_code_hint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/get_phone_code_button"
                style="@style/MsgBtn1"
                android:layout_marginRight="4dp"
                android:text="@string/get_verify_code" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_step_btn"
        style="@style/BtnTheme2"
        android:layout_marginTop="30dp"
        android:text="@string/next_step" />

</LinearLayout>